# hetu_template

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml  event.json  justfile
.github/workflows/: build_and_deploy.yml  build_images.yml  reusable_build_push.yml  reusable_deploy.yml  test_version_history.yml
backend/: .pre-commit-config.yaml  pyproject.toml
backend/src/allocation/: bootstrap.py  config.py
backend/src/allocation/adapters/: notifications.py  orm.py  redis_eventpublisher.py  repository.py
backend/src/allocation/domain/: events.py  model.py
backend/src/allocation/service_layer/: handlers.py  messagebus.py  unit_of_work.py
backend/tests/allocation/unit/: test_handlers.py
hasura/: Dockerfile
traefik/: traefik.yml
traefik/dynamic/: backend.yml  middlewares.yml  tls.yml
